fixed bug with images not dynamically shrinking on smaller phone screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,9 +169,8 @@ textarea {
 }
 
 @media screen and (max-width: 444px) {
-	.project3 .image a {
-		display: grid;
-		grid-template-columns: none;
+	.project3 .image .projectSortingHat {
+		grid-template-columns: auto;
 	}
 }
 
@@ -248,6 +247,11 @@ a {
 	/* border-bottom: dotted 1px rgba(255, 255, 255, 0.5); */
 	text-decoration: none;
 	color: inherit;
+}
+
+.center-project {
+	display: flex;
+	justify-content: center;
 }
 
 a:hover {
@@ -1592,6 +1596,22 @@ body.is-preload #footer {
 .project2 video {
 	justify-self: center;
 }
+@media screen and (max-width: 540px) {
+	.project2 video {
+		display: flex;
+		justify-content: center;
+		width: 100%;
+	}
+	.project2.projectGuessWho {
+		display: flex;
+		flex-direction: column;
+	}
+	.project2.projectGuessWho iframe {
+		width: auto;
+		height: 480px;
+	}
+}
+
 .image a img {
 	justify-self: center;
 }
@@ -1699,6 +1719,10 @@ body.is-preload #footer {
 @media screen and (max-width: 569px) {
 	.project3 {
 		grid-template-rows: none;
+		display: flex;
+		flex-direction: column;
+		/* width: 100%; */
+		/* height: 400px; */
 	}
 }
 @media screen and (max-width: 480px) {
